<resources>
    <string name="app_name">Stamb Application</string>
    <string name="active_classes_text">Active Classes</string>
    <string name="archived_classes_text">Archived Classes</string>
    <string name="create_class_text">Create Class</string>
    <string name="create_group_text">Create Group</string>
    <string name="specialty">Specialty</string>
    <string name="module">Module</string>
    <string name="grade">Grade</string>
    <string name="groups">Groups</string>
    <string name="td_groups">TD Groups</string>
    <string name="tp_groups">TP Groups</string>
    <string name="enter_group_number">Enter Group Number</string>
    <string name="number_of_td_groups">Number Of Td Groups</string>
    <string name="number_of_tp_groups">Number Of Tp Groups</string>
</resources>